syntax = "proto3";

package gramophile;

import "gramophile.proto";

option go_package = "github.com/brotherlogic/gramophile/proto";


message RecordUpdate {
    int64 date = 1;

    Record before = 2;
    Record after = 3;
}